--- a/assets/styles.css
+++ b/assets/styles.css
@@ -463,27 +463,64 @@ show invoice area start */
     justify-content: center;
     padding-top: 100px;
 }
+
 .new_inv_header {
     padding: 20px;
     border-bottom: 1px solid gainsboro;
 }
-.new_inv_header h1{
+
+.new_inv_header h1 {
     font-size: 20px;
     margin-bottom: 0;
     color: #000000;
     text-transform: capitalize;
 }
-.new_inv_header button{
+
+.new_inv_header button {
     background: none;
     padding: 0 15px;
 }
-.new_inv_header button:first-child{
+
+.new_inv_header button:first-child {
     color: #4790bd;
     border-right: 1px solid gainsboro;
 }
-.fs-14{
+
+.fs-14 {
     font-size: 14px !important;
 }
-.fs-12{
+
+.fs-12 {
     font-size: 12px !important;
+}
+
+.searchbtn {
+    background: #4790bd;
+    border: none;
+    color: #ffffff;
+    width: 35px;
+    text-align: center;
+}
+
+.customer-list-area ul {
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.customer-item {
+    padding: 8px 12px;
+    border: none;
+    background: transparent;
+    text-align: left;
+}
+
+.customer-item:hover {
+    background-color: #4790bd;
+    color: #ffffff;
+}
+.new-customer-view button{
+    background: #4790bd;
+    padding: 7px;
+    border-radius: 7px;
+    color: #ffffff;
 }
