--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,7 @@
 }
 .footer_area{
     height: 90px;
-    z-index: 9999999999999999999;
+    z-index: 2;
 }
 
 
@@ -548,6 +548,12 @@ show invoice area start */
     background-color: #4790bd;
     color: #ffffff;
 }
+.customer-item:hover h1{
+    color: #ffffff !important;
+}
+.customer-item:hover p{
+    color: #ffffff !important;
+}
 .new-customer-view button{
     color: #4790bd;
     padding: 7px;
@@ -687,4 +693,40 @@ color: red;
 }
 .stockDetails_popup{
     display: none;
+}
+.customerName_word{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 30px;
+    color: #4790bd;
+    border: 1px solid #4790bd;
+}
+.fs-10{
+    font-size: 10px !important;
+}
+.terms_details_table{
+    position: relative;
+}
+.terms_details_table::after{
+    position: absolute;
+    content: ' ';
+    height: 100%;
+    width: 193px;
+    right: 0;
+    top: 0;
+    background: #ffffff;
+    z-index: 1;
+}
+.trems_data_row:hover .term_data_action{
+    z-index: 2;
+}
+@media (max-width: 576px) {
+    .terms_details_table::after{
+        display: none;
+    }
 }
